# ChatterPipe-rs

./: .gitignore  README.md
chatterpipe/: Cargo.toml
chatterpipe/src/: main.rs
